--- a/block4/block4.qmd
+++ b/block4/block4.qmd
@@ -3,7 +3,7 @@ title: Inlämningsuppgift block 4 – hypotestest, konfidensintervall
 author: Statistiska Metoder med R
 format:
   pdf:
-    keep_tex: true
+    keep-tex: true
 editor_options:
   chunk_output_type: console
 knit:
