--- a/block2/Block_2.qmd
+++ b/block2/Block_2.qmd
@@ -1,9 +1,7 @@
 ---
 title: "Inlämningsuppgift block 2 – funktioner, objekt, grafer, import av data"
 author: "Statistiska Metoder med R"
-format:
-  pdf:
-    keep-tex: true
+format: docx
 editor_options:
   chunk_output_type: console
 knit:
