Sign KW Block_2.qmd

--- a/block2/Block_2.qmd
+++ b/block2/Block_2.qmd
@@ -17,7 +17,7 @@ Ange namn och personnummer(utan fyra sista siffrorna) på dem som deltagit aktiv
 
 Jacob Widaeus 950729
 
-Namn
+Karl Wärnberg 940807
 
 Namn
 
